# bg3d

./: .gitignore  ARCHITECTURE.md  ATTRIBUTIONS.md  Cargo.toml  README.md  bg3d.service  build.sh  index.css  index.html  meta.json  package-lock.json  package.json  test.js  version.sh
.cargo/: config.toml
bg3d_serde_shim/: Cargo.toml  build.sh
bg3d_serde_shim/src/: lib.rs
itch/: homepage.css  index.css  index.html  words.js
models/: chess.blend  chess.blend1  chess.gltf
models/computer/: computer.blend  computer.blend1
plugin/: pack.py
plugin/chess/: box.blend  box.blend1  box.gltf  chess.js  king_black.gltf  king_white.gltf  knight_black.gltf  manifest.json  pawn_black.gltf  queen_white.gltf
plugin/standard/: box.blend  box.blend1
plugins/: pack.py  pack.sh
plugins/carcassonne/: carcassonne.js  main.lua  manifest.json
plugins/cards/: cards.js  manifest.json
plugins/catan/: catan.js  manifest.json
plugins/catan/harbors/: links.txt
plugins/catan/pieces/: city.blend  city.gltf  house.blend  house.blend1  house.gltf  road.blend  road.blend1  road.gltf  robber.blend  robber.blend1  robber.gltf
plugins/checkers/: checkers.js  main.lua  manifest.json
plugins/chess/: chess.js  main.lua  manifest.json
plugins/go/: go.js  manifest.json
plugins/sorry/: manifest.json  piece.blend  piece.gltf  sorry.js
plugins/temp/uno/: uno.js
plugins/test/: main.lua  manifest.json  test.lua
plugins/uno/: main.lua  manifest.json  uno.js
plugins/welcome/: main.lua  manifest.json  welcome.js
src/: dictionary.txt  events.rs  gltf_ext.rs  index.ts  lobby.rs  main.rs  math.lua  math.rs  pawn.rs  pawn.ts  physics.rs  prelude.lua  router.rs  server.rs  user.rs
src/lua/: math.lua  pawns.lua  prelude.lua  utility.lua
static/: .gitignore  bundle.js  bundle.js.map  dashboard.html  favicon.pdn  full.html  index.css  index.html  prelude.bundle.js  prelude.js  variables.css
static/frontpage/: index.css  index.html  words.js
static/games/: cards.js  cards.json  chess.js  chess.json  go.js  go.json  welcome.js  welcome.json
static/games/checkers/: checker.blend  checker.blend1  checker.gltf  checker_black.gltf  checker_red.gltf  checkerboard.blend  checkerboard.blend1  checkerboard.glb  checkerboard.gltf
static/games/chess/: bishop.glb  bishop.gltf  bishop_black.gltf  bishop_white.gltf  king.glb  king.gltf  knight.glb  knight.gltf  knight_white.gltf  pawn.glb  pawn.gltf  pawn_white.gltf  pieces.blend  pieces.blend1  queen.glb  queen.gltf  queen_black.gltf  queen_white.gltf  rook.glb  rook.gltf  rook_black.gltf  rook_white.gltf
static/games/generic/: bag.blend  bag.blend1  bag.gltf  bird.blend  bird.blend1  bird.glb  bird.gltf  d6.gltf  die.blend  die.blend1  die.gltf  generate_dice_tex.py  meeple.blend  meeple.blend1  meeple.gltf  minibird.blend  minibird.gltf  piece.blend  piece.blend1  piece.gltf  post-it.blend  post-it.blend1  post-it.gltf  stand.blend  stand.gltf
static/games/go/: goban.blend  goban.blend1  goban.gltf  stone.blend  stone.blend1  stone.gltf
static/games/monopoly/: board.blend  board.blend1  board.gltf
static/games/notes/: cards.kra  cards.kra~  cards.webp~  info.kra  info.kra~  info.webp~  post-it.blend  post-it.gltf  welcome.kra  welcome.kra~  welcome.webp~
static/games/poker/: table.blend  (+2 more)
static/head/: head.blend  head.glb  tex.xcf
static/js/: DitheredMaterials.js  ExtrudeGeometryFB.js  MeshStandardDitheredMaterial.js  OrbitControls.js  chat.js  containers.js  contextmenu.js  game.js  hand.js  index.js  loop.js  manager.js  mouse-shake.js  pawn.js  pawns.js  pluginloader.js  prelude.js  shapes.js  spawnmenu.js  spring.js  tabbar.js  tooltip.js  transform.js  utils.js
static/models/: checker.blend  checker.blend1  checker.gltf  checker_black.gltf  checkerboard.blend  checkerboard.blend1  checkerboard.gltf  chess.blend  chess.blend1  chess.gltf
templates/: frontpage.css  frontpage.html  index.css  index.html
(+11 files in other folders)
