[package]
name = "BG3D"
version = "0.1.0"
authors = ["tesseractcat <tesseractcats@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.14.0" }
serde_json = { version = "1.0" }

flate2 = { version = "1.0.32", features = ["zlib-ng"], default-features = false } # Need zlib-ng for dictionary support

random_color = { version = "0.8.0" }

futures = { version = "0.3" }
futures-util = { version = "0.3.17" }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.7" }

#axum-macros = { version = "0.3.0-rc.3" }
axum = { version = "0.7.4", features = ["ws", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["fs", "compression-gzip"] }
data-url = { version = "0.1.1" }

rapier3d = { version = "0.22", features = [ "simd-stable" ] }
gltf = { version = "1.1.0", features = [ "extras" ] }

mlua = { version = "0.9.9", features = ["luajit", "vendored", "send", "macros", "unstable"] }
include_dir = "0.7.4"
indexmap = { version = "2.5.0", features = ["serde"] }

[lib]
name = "bg3d"

[[bin]]
name = "BG3D"

[profile.release]
codegen-units = 1

[profile.dev.package.rapier3d]
opt-level = 3
